--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -24,7 +24,7 @@ ACE_DOESNT_INSTANTIATE_NONSTATIC_OBJECT_MANAGER
 ACE_HAS_ANSI_CASTS                      Platform supports new C++ style casts (dynamic_cast, static_cast, reinterpret_cast and const_cast)
 ACE_DEFAULT_THREAD_KEYS                 Number of TSS keys, with ACE_HAS_TSS_EMULATION _only_.  Defaults to 64.
 ACE_THREADS_DONT_INHERIT_LOG_MSG                Specify this if you don't want threads to inherit parent thread's ACE_Log_Msg properties.
-ACE_HAS_OLD_GNUG                        Compiling with g++ prior to version 2.8.0.
+ACE_HAS_GNUG_PRE_2_8                    Compiling with g++ prior to version 2.8.0.
 ACE_HAS_ONE_DEFINITION_RULE             Compiler enforces C++ One Definition Rule
 ACE_HAS_PRIOCNTL                        OS has priocntl (2).
 ACE_HAS_RECV_TIMEDWAIT                  Platform has the MIT pthreads APIs for
