--- a/trunk/TAO/tests/Simple/time/README
+++ b/trunk/TAO/tests/Simple/time/README
@@ -1,8 +1,8 @@
 $Id$
 
-This is a simple CORBA example that has an object (Time) with
-only two methods, one that returns the current time of day on a
-server and another that shuts down the server.
+This is a simple CORBA example that has an object (Time) with only two
+methods, one that returns the current time of day on a server and
+another that shuts down the server.
 
 server:
 -------
