*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -291,7 +291,7 @@ E. Jason Scheck <jasons@ims.com>
 Daniel Proulx <daproulx@qc.bell.ca>
 Bill Tang <tang@tekats.com>
 John Huchinson <hutchiso@epi.syr.ge.com>
-Jack Erickson <jack@cibc.com>
+Jack Erickson <JErickson@exchange.ml.com>
 Byron Walton <bwalton@hughes.scg.hac.com>
 Bill Lear <rael@anarchy.cybercom.net>
 Mark Zusman <marklz@topaz.technion.ac.il>
@@ -611,6 +611,8 @@ Jeff Hopper <jhopper@nosc.mil>
 Mats Nilsson <mats.nilsson@xware.se>
 Dongwook Kim <baksoo@dbserver.kaist.ac.kr>
 Don Davis <ded@heart.jhuapl.edu>
+Alberto Villarica <Alberto.Villarica.rav@nt.com>
+XuYifeng <xuyf@pop.zg169.net>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
