--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -283,9 +283,11 @@ ACE_LACKS_PRI_T                         Platform lacks pri_t (e.g., Tandem NonSt
 ACE_LACKS_PTHREAD_CANCEL                Platform lacks pthread_cancel().
 ACE_LACKS_PTHREAD_THR_SIGSETMASK        Platform lacks pthread_thr_sigsetmask (e.g., MVS, HP/UX, and OSF/1 3.2)
 ACE_LACKS_PWD_REENTRANT_FUNCTIONS       Platform lacks getpwnam_r() methods (e.g., SGI 6.2).
+ACE_LACKS_READDIR_R                     Platform uses ACE_HAS_DIRENT but does not have readdir_r ().
 ACE_LACKS_RECVMSG                       Platform lacks recvmsg() (e.g., Linux)
 ACE_LACKS_RWLOCK_T                      Platform lacks readers/writer locks.
 ACE_LACKS_SBRK                          Platform lacks a working sbrk() (e.g., Win32 and VxWorks)
+ACE_LACKS_SEEKDIR                       Platform uses ACE_HAS_DIRENT but does not have seekdir ().
 ACE_LACKS_SEMBUF_T                      Platform lacks struct sembuf (e.g., Win32 and VxWorks)
 ACE_LACKS_SETDETACH                     Platform lacks pthread_attr_setdetachstate() (e.g., HP/UX 10.x)
 ACE_LACKS_SETSCHED                      Platform lacks pthread_attr_setsched() (e.g. MVS)
@@ -311,6 +313,7 @@ ACE_LACKS_STRRECVFD                     Platform doesn't define struct strrecvfd
 ACE_LACKS_SYSCALL                       Platform doesn't have syscall() prototype
 ACE_LACKS_T_ERRNO                       Header files lack t_errno for TLI
 ACE_LACKS_TCP_H                         Platform doesn't have netinet/tcp.h
+ACE_LACKS_TELLDIR                       Platform uses ACE_HAS_DIRENT but does not have telldir ().
 ACE_LACKS_THREAD_STACK_SIZE             Platform lacks pthread_attr_setstacksize() (e.g., Linux pthreads)
 ACE_LACKS_TIMEDWAIT_PROTOTYPES          MIT pthreads platform lacks the timedwait prototypes
 ACE_LACKS_U_LONGLONG_T                  Platform does not have u_longlong_t typedef, and "sun" is defined.
