added Ossama Othman <othman@astrosun.tn.cornell.edu>

--- a/trunk/README
+++ b/trunk/README
@@ -613,6 +613,7 @@ Dongwook Kim <baksoo@dbserver.kaist.ac.kr>
 Don Davis <ded@heart.jhuapl.edu>
 Alberto Villarica <Alberto.Villarica.rav@nt.com>
 XuYifeng <xuyf@pop.zg169.net>
+Ossama Othman <othman@astrosun.tn.cornell.edu>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
