--- a/trunk/TAO/tests/Simple/bank/README
+++ b/trunk/TAO/tests/Simple/bank/README
@@ -1,17 +1,22 @@
 $Id$
 
-This is a simple CORBA example that has a module Bank with two interfaces Account and AccountManager. The Account interface has a method to return the balance in that account. The AccountManager interface has a method to create a new Account and return the IORof this to the client. The two interfaces also have methods to shutdown the server.
+This is a simple CORBA example that has a module Bank with two
+interfaces Account and AccountManager. The Account interface has a
+method to return the balance in that account. The AccountManager
+interface has a method to create a new Account and return the IORof
+this to the client. The two interfaces also have methods to shutdown
+the server.
 
 server:
 -------
 
-server [-d] 
+server [-d]
 
 Options:
 -------
 -d    Debug flag (It is additive more -d flags will give debugging).
 
-When the server is started, you should see as the first line of output 
+When the server is started, you should see as the first line of output
 something that looks like
 	iiop:1.0//danzon.cs.wustl.edu:10015/P35ad159600081a38/child_poa/server
 	(-ORBobjrefstyle url)
@@ -34,28 +39,3 @@ Options:
 -d    Debug flag
 -x    Tells the server to shutdown at the end of the test.
 -n    no. of iterations
-
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
