--- a/trunk/README
+++ b/trunk/README
@@ -614,6 +614,9 @@ Don Davis <ded@heart.jhuapl.edu>
 Alberto Villarica <Alberto.Villarica.rav@nt.com>
 XuYifeng <xuyf@pop.zg169.net>
 Ossama Othman <othman@astrosun.tn.cornell.edu>
+Tom Shields <Shields@MarsHotel.CMPU.NET>
+Krishna Padmasola <pkrishna@cybercash.co.in>
+Andre Folkers <folkers@informatik.mu-luebeck.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
