*** empty log message ***

--- a/trunk/apps/drwho/ChangeLog
+++ b/trunk/apps/drwho/ChangeLog
@@ -1,6 +1,7 @@
 Sat Sep 12 21:21:01 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
-	* Made zillions of changes to "ACE"ify all of the code.
+	* Made zillions of changes to "ACE"ify all of the code.  Drwho is
+	  now officially working again!
 
 Sun Sep  6 22:48:52 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
