--- a/trunk/README
+++ b/trunk/README
@@ -460,7 +460,7 @@ Dave Moore <dave.moore@gecm.com>
 Joseph Cross <joseph.k.cross@lmco.com>
 Cherif Sleiman <sleiman@research.moore.com>
 Stefan Ericsson <Stefan.Ericsson@osd.uab.ericsson.se>
-Wei Chiang <chiang@tele.nokia.fi>
+Wei Chiang <wei.chiang@ntc.nokia.com>
 Thanh Ma <tma@encore.com>
 Oleg Krivosheev <kriol@fnal.gov>
 Stephen Coy <stevec@wsa.com.au>
