*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -617,6 +617,7 @@ Ossama Othman <othman@astrosun.tn.cornell.edu>
 Tom Shields <Shields@MarsHotel.CMPU.NET>
 Krishna Padmasola <pkrishna@cybercash.co.in>
 Andre Folkers <folkers@informatik.mu-luebeck.de>
+Paul Sexton <pauls@ENTERPRISE.bt.co.uk>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
