--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -820,6 +820,8 @@ ACE_LACKS_TIMEDWAIT_PROTOTYPES          MIT pthreads platform lacks
 ACE_LACKS_TIMESPEC_T                    Platform does not define
                                         timepec_t as a typedef for
                                         struct timespec.
+ACE_LACKS_TRUNCATE                      Platform doesn't have truncate() 
+                                        (e.g., vxworks)
 ACE_LACKS_U_LONGLONG_T                  Platform does not have
                                         u_longlong_t typedef, and
                                         "sun" is defined.
