--- a/trunk/TAO/examples/Quoter/README
+++ b/trunk/TAO/examples/Quoter/README
@@ -1,7 +1,18 @@
+// $Id$
 
-Quoter example
--------------
+Here is a Stock Quoter example that features the use of the TAO IDL
+compiler, the different types of configuration settings (global vs
+tss, etc), and the Life Cycle Service.
 
+For your convenience, the run_test.btm has been provided.  It is a
+batch file that runs under 4NT.  Work is in progress for a regular
+batch file that performs the same action.  We'll probably get it
+working on other platforms as soon as it is completed.
+
+----------------------------------------
+
+DOCUMENTATION FOR THE EXAMPLE
+=============================
 
 Context: The Quoter example serves several tests, the first is the test
          of several multithreading policies and the second is showing the 
@@ -67,3 +78,45 @@ client: Creates one Quoter through using the Quoter_Factory_Finder. After that
 To make use of the move operation you need to use the -sm switch on 
 the perl script. This activates in the server multiple objects, which is needed for
 moving.
+
+RUNNING THE EXAMPLE
+===================
+
+run_test
+
+Name Server
+-----------
+
+Found under TAO\Orbsvcs, this is run for connections from the 
+server, client, and factory finder.  Plans to move this into the
+server are under consideration.
+
+To run with the default settings, use
+
+run_tests /ns
+
+Quoter Server
+-------------
+
+To run with the default settings, use
+
+run_tests /sv
+
+
+Quoter Client
+-------------
+
+To run with the default settings, use
+
+run_tests /cl
+
+Quoter Factory Finder
+---------------------
+
+To run with the default settings, use
+
+run_tests /ff
+
+Quoter example
+-------------
+
