--- a/trunk/TAO/tests/CDR/README
+++ b/trunk/TAO/tests/CDR/README
@@ -1,14 +1,23 @@
 # $Id$
 
-This directory contains two simple tests for the CDR stream class;
+This directory contains the following tests for the CDR stream class;
 
-+ basic_types: simply encodes a lot of CORBA::Octets, 
-    CORBA::Short and CORBA::Long into a CDR stream and then decodes
-    them; verifying that the same results are obtained.
+        . basic_types.cpp
 
-+ tc: TAO implements TypeCodes using a CDR buffer (this was
-    inherited from the Sun IIOP engine), this test verifies thatn some
-    of the basic TypeCodes actually are able to interpret their CDR
-    buffers.
+          Simply encodes a lot of CORBA::Octets, CORBA::Short and
+          CORBA::Long into a CDR stream and then decodes them;
+          verifying that the same results are obtained. 
 
-	Both tests take no arguments and return 0 on success.
+        . growth.cpp
+        
+          Helps measure how the growth strategy affects the
+          performance of CDR streams.
+
+        . tc.cpp
+        
+          TAO implements TypeCodes using a CDR buffer (this was
+          inherited from the Sun IIOP engine), this test verifies that
+          some of the basic TypeCodes actually are able to interpret
+          their CDR buffers.
+
+These tests take no arguments and return 0 on success.
