--- a/trunk/apps/gperf/ChangeLog
+++ b/trunk/apps/gperf/ChangeLog
@@ -1,47 +1,52 @@
+Tue Sep 15 21:54:07 1998  David L. Levine  <levine@cs.wustl.edu>
+
+        * tests/Makefile: filter timestamps from test output so that
+          diffs will pass.
+
 Tue Sep 15 18:14:08 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
-	* tests: Updated the expected output to look for 2.7 vs 2.6
-	  of gperf.
+        * tests: Updated the expected output to look for 2.7 vs 2.6
+          of gperf.
 
 Thu Sep 10 16:50:21 1998  Carlos O'Ryan  <coryan@cs.wustl.edu>
 
-	* tests/Makefile: 
-	  The test programs were not linking against ACE.
+        * tests/Makefile:
+          The test programs were not linking against ACE.
 
 Tue Sep  8 12:45:53 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
-	* tests/test.cpp: Added #include "ace/OS.h" so that the ACE_RCSID
- 	  macro is defined.  Thanks to Arturo Montes
- 	  <mitosys@colomsat.net.co> for reporting this.
+        * tests/test.cpp: Added #include "ace/OS.h" so that the ACE_RCSID
+          macro is defined.  Thanks to Arturo Montes
+          <mitosys@colomsat.net.co> for reporting this.
 
 Sat Aug 22 08:44:15 1998  Alexander Babu Arulanthu  <alex@cs.wustl.edu>
 
-	* src/Options.cpp : Fixed the typo (-V instead of -v) under 'case
-	  h' print string.  
+        * src/Options.cpp : Fixed the typo (-V instead of -v) under 'case
+          h' print string.
 
 Fri Aug 21 11:57:57 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
-	* src/Key_List.cpp (set_output_types): Make sure that we leave an
- 	  extra space between the struct tag and the wordlist so the
- 	  compiler doesn't complain.  Thanks to Andy Gokhale for reporting
- 	  this.
+        * src/Key_List.cpp (set_output_types): Make sure that we leave an
+          extra space between the struct tag and the wordlist so the
+          compiler doesn't complain.  Thanks to Andy Gokhale for reporting
+          this.
 
-	* src/gperf.cpp: Modified the main() program so that it doesn't
- 	  print the starting time until AFTER we've parsed the arguments.
- 
-	* src/Version.cpp: Updated the version to 2.7 to reflect the
-	  new changes.
+        * src/gperf.cpp: Modified the main() program so that it doesn't
+          print the starting time until AFTER we've parsed the arguments.
 
-	* src/Options.cpp (operator): Added a new -V option, which just
- 	  exits with a value of 0.  This is useful for checking if gperf
- 	  exists in the search path.  We use the feature in TAO.
+        * src/Version.cpp: Updated the version to 2.7 to reflect the
+          new changes.
 
-	* src: Removed the globally overloaded new operator.  This was a
- 	  portability pain and didn't really improve performance very
- 	  much.
+        * src/Options.cpp (operator): Added a new -V option, which just
+          exits with a value of 0.  This is useful for checking if gperf
+          exists in the search path.  We use the feature in TAO.
 
-	* src/Options.cpp (operator): Fixed '%e' to be '%r' to come up to
- 	  speed with ACE changes.
+        * src: Removed the globally overloaded new operator.  This was a
+          portability pain and didn't really improve performance very
+          much.
+
+        * src/Options.cpp (operator): Fixed '%e' to be '%r' to come up to
+          speed with ACE changes.
 
 Sat Aug 15 07:59:58 1998  David L. Levine  <levine@cs.wustl.edu>
 
