--- a/trunk/README
+++ b/trunk/README
@@ -618,6 +618,7 @@ Tom Shields <Shields@MarsHotel.CMPU.NET>
 Krishna Padmasola <pkrishna@cybercash.co.in>
 Andre Folkers <folkers@informatik.mu-luebeck.de>
 Paul Sexton <pauls@ENTERPRISE.bt.co.uk>
+Marc Lehmann <pcg@goof.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
