--- a/trunk/apps/gperf/ChangeLog
+++ b/trunk/apps/gperf/ChangeLog
@@ -1,12 +1,18 @@
+Wed Sep 16 19:08:13 1998  David L. Levine  <levine@cs.wustl.edu>
+
+        * Makefile: don't run build/run tests on CROSS-COMPILE platforms.
+          Thanks to Raja Ati <rati@montereynets.com> for reporting this
+          problem.
+
 Wed Sep 16 18:18:41 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
-	* tests/Makefile: Changed CFLAGS to CCFLAGS to make aCC happy on
- 	  HP/UX.  Thanks to John Mulhern for reporting this.
+        * tests/Makefile: Changed CFLAGS to CCFLAGS to make aCC happy on
+          HP/UX.  Thanks to John Mulhern for reporting this.
 
 Tue Sep 15 18:14:08 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
-	* tests/test-6.exp (Usage): Fixed the usage so diff should no
- 	  longer complain...  Thanks to David for reporting this.
+        * tests/test-6.exp (Usage): Fixed the usage so diff should no
+          longer complain...  Thanks to David for reporting this.
 
 Tue Sep 15 21:54:07 1998  David L. Levine  <levine@cs.wustl.edu>
 
