added Raja Ati <rati@montereynets.com>

--- a/trunk/README
+++ b/trunk/README
@@ -619,6 +619,7 @@ Krishna Padmasola <pkrishna@cybercash.co.in>
 Andre Folkers <folkers@informatik.mu-luebeck.de>
 Paul Sexton <pauls@ENTERPRISE.bt.co.uk>
 Marc Lehmann <pcg@goof.com>
+Raja Ati <rati@montereynets.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
