--- a/trunk/README
+++ b/trunk/README
@@ -621,6 +621,7 @@ Paul Sexton <pauls@ENTERPRISE.bt.co.uk>
 Marc Lehmann <pcg@goof.com>
 Anne Blankert <anne@geodan.nl>
 Raja Ati <rati@montereynets.com>
+Clinton Carr <ccarr@websocket.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
