--- a/trunk/README
+++ b/trunk/README
@@ -624,6 +624,7 @@ Marc Lehmann <pcg@goof.com>
 Anne Blankert <anne@geodan.nl>
 Raja Ati <rati@montereynets.com>
 Clinton Carr <ccarr@websocket.com>
+Peter Liqun Na <liqunna@cs.sunysb.edu>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
