--- a/trunk/README
+++ b/trunk/README
@@ -18,11 +18,12 @@ The ADAPTIVE Communication Environment (ACE) is an object-oriented
 communication software.  ACE provides a rich set of reusable C++
 wrappers and frameworks that perform common communication software
 tasks across a range of OS platforms, including Win32 (i.e., WinNT
-3.5.x and 4.x and Win95), most versions of UNIX (e.g., SunOS 4.x,
-Solaris 2.x, SGI IRIX 5.x and 6.x, HP-UX 9.x and 10.x, OSF/1
-a.k.a. DEC UNIX, AIX 4.x, Linux, SCO, UnixWare, and FreeBSD), VxWorks,
-Chorus, and MVS OpenEdition.  A single source tree is used for all
-these platforms and porting ACE to other platforms is relatively easy.
+3.5.x/4.x, Win95, and WinCE), most versions of UNIX (e.g., SunOS 4.x
+and 5.x, SGI IRIX 5.x and 6.x, HP-UX 9.x, 10.x, and 11.x, DEC UNIX
+4.x, AIX 4.x, Linux, SCO, UnixWare, NetBSD, and FreeBSD), real-time
+operating systems (e.g., VxWorks, Chorus, LynxOS, and pSoS), and MVS
+OpenEdition.  A single source tree is used for all these platforms and
+porting ACE to other platforms is relatively easy.
 
 The communication software components provided by ACE include event
 demultiplexing and event handler dispatching, service initialization,
@@ -196,6 +197,8 @@ send mail to me at the ace-users-request@cs.wustl.edu if you'd like to
 join the mailing list.  There is also a USENET newsgroup called
 comp.soft-sys.ace.
 
+----------------------------------------
+
 BUILDING AND INSTALLING ACE
 
 Please refer to the http://www.cs.wustl.edu/~schmidt/ACE-Install.html
@@ -207,23 +210,32 @@ The current release has been tested extensively, but if you find any
 bugs, please report them to the ACE mailing list
 ace-users@cs.wustl.edu using the $ACE_ROOT/BUG-REPORT-FORM.
 
+----------------------------------------
+
 ACKNOWLEDGEMENTS
 
 ACE has been deeply influenced and improved by the following members
 of my research group at Washington University:
 
+Everett Anderson <eea1@cec.wustl.edu>
 Alexander Babu Arulanthu <alex@cs.wustl.edu>
+Shawn Atkins <sma1@cs.wustl.edu>
 Matt Braun <mjb2@cs.wustl.edu>
 Darrell Brunsch <brunsch@cs.wustl.edu>
 Chris Cleeland <chris@cs.wustl.edu>
 Sergio Flores-Gaitan <sergio@cs.wustl.edu>
 Chris Gill <cdgill@cs.wustl.edu>
 Aniruddha Gokhale <gokhale@cs.wustl.edu>
+Pradeep Gore <pradeep@cs.wustl.edu>
 Tim Harrison <harrison@cs.wustl.edu>
 James Hu <jxh@cs.wustl.edu>
 Prashant Jain <pjain@cs.wustl.edu>
+Vishal Kachroo <vishal@cs.wustl.edu>
 Michael Kircher <mk1@cs.wustl.edu>
+Yamuna Krishnamurthy <yamuna@cs.wustl.edu>
+Fred Kuhns <fredk@cs.wustl.edu>
 David Levine <levine@cs.wustl.edu>
+Kirthika Parameswaran <kirthika@cs.wustl.edu>
 Carlos O'Ryan <coryan@cs.wustl.edu>
 Jeff Parsons <jp4@cs.wustl.edu>
 Irfan Pyarali <irfan@cs.wustl.edu>
@@ -625,6 +637,8 @@ Anne Blankert <anne@geodan.nl>
 Raja Ati <rati@montereynets.com>
 Clinton Carr <ccarr@websocket.com>
 Peter Liqun Na <liqunna@cs.sunysb.edu>
+Frank Adcock <frank@bushlife.com.au>
+Daniel A Nieten <dnieten@bellsouth.net>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
