--- a/trunk/TAO/examples/Simple/echo/README
+++ b/trunk/TAO/examples/Simple/echo/README
@@ -1,22 +1,22 @@
 $Id$
 
 This is a simple CORBA example that has an object (Echo) with only two
-methods, one that returns the message to be displayed  and
-another that shuts down the server.
+methods, one that returns the message to be displayed and another that
+shuts down the server.
 
 server:
 -------
 
-server [-d] [-o <ior_output_file>] 
+server [-d] [-o <ior_output_file>]
 
 Options:
 -------
 -d    Debug flag (It is additive more -d flags will give debugging).
 -o    Outputs the server ior to the file
 
-
-When the server is started, you should see as the first line of output 
+When the server is started, you should see as the first line of output
 something that looks like
+
 	iiop:1.0//danzon.cs.wustl.edu:10015/P35ad159600081a38/child_poa/server
 	(-ORBobjrefstyle url)
 or
@@ -40,15 +40,14 @@ Options:
 -f    Reads the server ior from the file
 -n    no. of iterations
 -k    IOR
-	
+
 You can either cut and paste the IOR from the server to the client
 (with the -k option), or have the client read the IOR from a file
 using the -f option. (This file is produced using the -o option of the
 server.)
-	
+
 run_test.pl:
 ------------
 
-This is a perl script which runs the server and client, and shuts down
-the server when it is done.
-
+This perl script runs the server and client and shuts down the server
+when it is done.
